kelvin: the pages

--- a/css/landing-assets/css/landing-login.css
+++ b/css/landing-assets/css/landing-login.css
@@ -3563,7 +3563,7 @@ table.dataTable td:last-child, table.dataTable th:last-child{
 	width:100%;
 	height: 100%;
 	background-image: linear-gradient(-90deg, #000000d9, #031af44a);
-	background-image: linear-gradient(-90deg, #4CAF50, #020516b0);
+	background-image: linear-gradient(314deg, #1ac6e3bd, #5e43f68f);
 	
 }
 
